WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
33848
Horizontal scrollbar works in reverse at milliondollarcu.be
https://bugs.webkit.org/show_bug.cgi?id=33848
Summary
Horizontal scrollbar works in reverse at milliondollarcu.be
Adam Roben (:aroben)
Reported
2010-01-19 09:15:21 PST
To reproduce: 1. Go to
http://milliondollarcu.be/
2. Spoof as Safari Mac (to get the page to kick into 3D mode) 3. Resize the window so there's a horizontal scrollbar 4. Scroll using the horizontal scrollbar When you move the horizontal scrollbar, the page scrolls in the wrong direction.
Attachments
Patch
(2.89 KB, patch)
2010-02-05 14:16 PST
,
Enrica Casucci
simon.fraser
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Adam Roben (:aroben)
Comment 1
2010-01-19 09:15:46 PST
<
rdar://problem/7556121
>
Enrica Casucci
Comment 2
2010-02-05 14:16:48 PST
Created
attachment 48259
[details]
Patch
WebKit Review Bot
Comment 3
2010-02-05 14:23:31 PST
Attachment 48259
[details]
did not pass style-queue: Failed to run "WebKitTools/Scripts/check-webkit-style" exit_code: 1 WebCore/platform/graphics/win/WKCACFLayerRenderer.cpp:159: Tab found; better to use spaces [whitespace/tab] [1] Total errors found: 1 If any of these errors are false positives, please file a bug against check-webkit-style.
Simon Fraser (smfr)
Comment 4
2010-02-05 14:30:03 PST
Comment on
attachment 48259
[details]
Patch r=me but you have to remove the tabs before committing.
Enrica Casucci
Comment 5
2010-02-05 14:34:01 PST
(In reply to
comment #4
)
> (From update of
attachment 48259
[details]
) > r=me but you have to remove the tabs before committing.
Sorry, I forgot to setup Visual studio correctly. I'll do that.
Enrica Casucci
Comment 6
2010-02-05 14:41:52 PST
Committed revision 54446.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug