Horizontal scrollbar works in reverse at milliondollarcu.be <rdar://problem/7556121> https://bugs.webkit.org/show_bug.cgi?id=33848

Reviewed by Simon Fraser.

Added a manual test.

* manual-tests/win: Added.
* manual-tests/win/horizontal-scroll-composited.html: Added.
* platform/graphics/win/WKCACFLayerRenderer.cpp:
(WebCore::WKCACFLayerRenderer::setScrollFrame):
(WebCore::WKCACFLayerRenderer::setRootChildLayer):



Canonical link: https://commits.webkit.org/45765@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@54446 268f45cc-cd09-0410-ab3c-d52691b4dbfc